--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Brotli==1.0.9
 click==8.0.1
 dash==1.21.0
 dash-core-components==1.17.1
+dash-cytoscape==0.3.0
 dash-html-components==1.1.4
 dash-table==4.12.0
 flake8==3.9.2
